fixed spacing on mailing address

--- a/src/css/contact.scss
+++ b/src/css/contact.scss
@@ -35,7 +35,7 @@
       align-items: center;
       margin: 30px 0 0 0;
       .contact-info {
-        width: 90%;
+        width: 60%;
         margin: 5px;
         text-align: center;
       }
